<resources>
    <string name="app_name">Material3</string>

    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="to_list">To list</string>
    <string name="config">Config</string>
    <string name="apply">Apply</string>


    <string name="any">Any</string>

    <string name="above_value">%1$s+</string>
    <string name="up_to_value">Up to %1$s</string>
    <string name="between_values">%1$s to %2$s</string>
    <string name="search_anything">Search anything</string>
    <string name="recommended">Recommended</string>
    <string name="search_for_users">Search for users</string>
    <string name="price">Price</string>
    <string name="search_shortcut_short_label">Search</string>
    <string name="search_shortcut_long_label">Search</string>
    <string name="search_disabled_message">Search is disabled</string>
</resources>