<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:shortcutDisabledMessage="@string/search_disabled_message"
        android:shortcutId="search"
        android:shortcutLongLabel="@string/search_shortcut_long_label"
        android:shortcutShortLabel="@string/search_shortcut_short_label"
        tools:targetApi="n_mr1">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.chunchiehliang.material3.MainActivity"
            android:targetPackage="com.chunchiehliang.material3">
            <extra
                android:name="key"
                android:value="value" />
        </intent>
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>