<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/btn_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/material_margin"
                android:text="@string/any"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/material_margin"
                android:stepSize="100.0"
                android:valueFrom="0"
                android:valueTo="20000"
                app:labelBehavior="withinBounds"
                app:tickVisible="false"
                app:values="@array/initial_slider_values" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/material_margin"
            android:text="@string/apply" />
    </LinearLayout>
</layout>